# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/: cli.py  formatter.py  gendiff.py  parser.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
